[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.00392157, 0.192157, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 213.0
margin_right = 612.0
margin_bottom = 287.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 225.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 21.0
margin_bottom = 20.0
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 225.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 225.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 21.0
margin_bottom = 20.0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 25.0
margin_right = 225.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 10

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 225.0
margin_bottom = 74.0
text = "Return"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/BGMSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
